Updated dashboard to use coordinates rather than city name